# IzarraVM

./: .gitignore  .readthedocs.yaml  Cargo.toml  CUsersvolsu.claudeprojectsD--dev-IzarraVM1cb4cf6c-953a-452c-87dd-2eed113ed898tool-resultsdma_diff.txt  LICENSE  NOTICE  README.md  mkdocs.yml
.cargo/: config.toml
.github/workflows/: ci.yml
c_drive/: TESTDEV.SYS  TESTS.COM
crates/izarravm/: Cargo.toml
crates/izarravm-audio/: Cargo.toml
crates/izarravm-audio/src/: dsp.rs  lib.rs  mixer.rs  opl.rs  output.rs  pcm.rs  resample.rs  wss.rs  yamaha_adpcm.rs
crates/izarravm-bus/: Cargo.toml
crates/izarravm-bus/src/: lib.rs
crates/izarravm-core/: Cargo.toml
crates/izarravm-core/src/: lib.rs
crates/izarravm-core/tests/: video_card.rs
crates/izarravm-corpus/: Cargo.toml
crates/izarravm-corpus/src/: main.rs
crates/izarravm-cpu/: Cargo.toml
crates/izarravm-cpu/src/: fpu.rs  lib.rs  mmx.rs
crates/izarravm-cpu/tests/: conformance.rs
crates/izarravm-cpu/tests/fixtures/: conformance_sample.json
crates/izarravm-dos/: Cargo.toml
crates/izarravm-dos/src/: driver.rs  lib.rs  memory.rs
crates/izarravm-firmware/: Cargo.toml
crates/izarravm-firmware/roms/: izarra-bios.asm  izbios-art.inc  izbios-boot.inc  izbios-bootbox.inc  izbios-chime.inc  izbios-codepage.inc  izbios-core.inc  izbios-defs.inc  izbios-gfx.inc  izbios-kbd.inc  izbios-lfb.inc  izbios-logo.inc  izbios-result.inc  izbios-tables.inc  kbd-bios-core.inc  kbd-bios.asm  kbd-layout-meta.inc  kbd-layouts.inc  kbd-resident.asm  probe-table.inc  ramtest-core.inc  setup-ui.inc  tokados.img  tokados.rom
crates/izarravm-firmware/roms/boot-suite/: README.md  boot.asm  izarravm-test.img  results.inc  stage2.asm
crates/izarravm-firmware/roms/dos/: echo.asm  echo.com  emsnone.asm  emsnone.com  emstest.asm  emstest.com  exehello.asm  exit42.asm  gswmode.asm  gswmode.com  hello.asm  mousetst.asm  mousetst.com  runner.asm  runner.com  sndtst.asm  sndtst.com  tokaemm.asm  tokaemm.sys  (+10 more)
crates/izarravm-firmware/src/: lib.rs
crates/izarravm-input/: Cargo.toml
crates/izarravm-input/src/: keyboard.rs  lib.rs
crates/izarravm-machine/: Cargo.toml
crates/izarravm-machine/src/: ata.rs  atapi.rs  cdimage.rs  dma.rs  dosmem.rs  ems.rs  fat12.rs  fat32.rs  fat32_volume.rs  fat_name.rs  fdc.rs  floppy.rs  ide.rs  katea_names.rs  katea_tree.rs  katea_volume.rs  katea_write.rs  keyboard.rs  lib.rs  lpt.rs  memmap.rs  mouse.rs  pic.rs  pit.rs  raw_program.rs  rtc.rs  speaker.rs  uart.rs  uma.rs  unittester.rs  xms.rs
crates/izarravm-machine/tests/: dhrystone.rs  distira.rs  izarra_aggregate.rs  izarra_c1.rs  izarra_c2.rs  izarra_c3.rs  izarra_d.rs  izarra_e.rs  izarra_guest_keyboard_isr.rs  izarra_guest_mouse_isr.rs  izarra_kbd_layouts.rs  izarra_margo.rs  izarra_mouse_driver.rs  izarra_ramtest.rs  izarra_shift_release.rs  neurketa.rs
crates/izarravm-machine/tests/fixtures/: CBLEAK.COM  GFXCUR.COM  MTEST.COM  SEGKEEP.COM  WHEELTEST.COM  cbleak.asm  gfxcur.asm  mtest.asm  segkeep.asm  wheeltest.asm
crates/izarravm-video/: Cargo.toml
crates/izarravm-video/examples/: dump_cp437_fonts.rs
crates/izarravm-video/src/: distira.rs  font.rs  lib.rs  margo.rs  vga.rs
crates/izarravm-video/tests/: distira.rs  distira_voodoo_progress.rs
crates/izarravm/assets/: izarra3000_logo.rgba
crates/izarravm/src/: bench_reference.rs  cmos.rs  crt.rs  gui.rs  main.rs  prefs.rs
crates/virtualdos/: Cargo.toml
crates/virtualdos-audio/: Cargo.toml
crates/virtualdos-audio/src/: lib.rs
crates/virtualdos-bus/: Cargo.toml
crates/virtualdos-bus/src/: lib.rs
crates/virtualdos-core/: Cargo.toml
crates/virtualdos-core/src/: lib.rs
crates/virtualdos-corpus/: Cargo.toml
crates/virtualdos-corpus/src/: main.rs
crates/virtualdos-cpu/: Cargo.toml
crates/virtualdos-cpu/src/: lib.rs
crates/virtualdos-cpu/tests/: conformance.rs
crates/virtualdos-cpu/tests/fixtures/: conformance_sample.json
crates/virtualdos-dos/: Cargo.toml
crates/virtualdos-firmware/: Cargo.toml
crates/virtualdos-firmware/roms/: i386dx25-test.asm
crates/virtualdos-firmware/src/: lib.rs
crates/virtualdos-input/: Cargo.toml
crates/virtualdos-machine/: Cargo.toml
crates/virtualdos-machine/src/: lib.rs
crates/virtualdos-video/: Cargo.toml
crates/virtualdos-video/src/: lib.rs
crates/virtualdos/src/: main.rs
dev_docs/: 2026-06-28-sp1-boot-fault-log.md  2026-06-29-sp3-cutemouse-crossref.md  2026-06-29-sp3-tool-triage.md  2026-07-01-gsw586-86box-speed-plan.md
docs/: clean-room-audio.md  clean-room-dos.md  compatibility-corpus.md  index.md
docs/superpowers/plans/: 2026-06-17-vga-display-address-wrap.md  2026-06-17-vga-line-compare-split.md  2026-06-17-vga-planar-modes.md  2026-06-17-vga-raster-core.md
docs/superpowers/specs/: 2026-06-17-vga-display-address-wrap-design.md  2026-06-17-vga-line-compare-split-design.md  2026-06-17-vga-planar-modes-design.md  2026-06-17-vga-raster-core-design.md
docs/vega/: distira-voodoo-compatibility-spec.md  vega-programmers-guide.md  vega-technical-reference.md
docs/vga-core/: README.md
examples/: izarravm.toml  virtualdos.toml
scripts/: build-freedos-hdd-image.py  build-freedos-image.py  fetch-freedos-spike.ps1  license_txt.py  pgo-build.ps1  prep-freedos-spike.py
toka-dos/: .gitignore  README.md  build-freedos.ps1  build.ps1
toka-dos/boot/: tokaboot.asm
toka-dos/devtools/: testdev.asm  tests.c
toka-dos/freedos/: VENDOR.md
toka-dos/freedos/freecom/: VERSION.TXT
toka-dos/icommand/: icommand.c
toka-dos/izcmd/: izcmd.c
toka-dos/pack/: Cargo.toml
toka-dos/pack/src/: main.rs
toka-dos/runtime/: toka.c  toka.h
toka-dos/tools/: append.c  assign.c  attrib.c  backup.c  chkdsk.c  choice.c  comp.c  debug.c  defrag.c  deltree.c  diskcomp.c  diskcopy.c  doskey.c  editor.c  edlin.c  emm386.c  exe2bin.c  expand.c  fasthelp.c  fastopen.c  fc.c  find.c  findstr.c  graphics.c  help.c  ibasic.c  icdex.c  iemm.c  izbasic.c  izcdex.c  izemm.c  izmouse.asm  keyb.c  label.c  mem.c  mirror.c  mode.c  more.c  mouse.asm  move.c  (+10 more)
tools/: gen_codepage_fonts.py  gen_keyboard_layouts.py
tools/fonts/: README.md
(+41 files in other folders)
