[workspace]
resolver = "2"
members = [
    "crates/virtualdos",
    "crates/virtualdos-audio",
    "crates/virtualdos-bus",
    "crates/virtualdos-core",
    "crates/virtualdos-corpus",
    "crates/virtualdos-cpu",
    "crates/virtualdos-dos",
    "crates/virtualdos-firmware",
    "crates/virtualdos-input",
    "crates/virtualdos-machine",
    "crates/virtualdos-video",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/vorvek/VirtualDOS"
authors = ["VirtualDOS contributors"]

[workspace.dependencies]
bitflags = "2.6"
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.15"
gilrs = "0.11"
midir = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
wgpu = "26"
winit = "0.30"
