[workspace]
resolver = "2"
members = [
    "crates/izarravm",
    "crates/izarravm-audio",
    "crates/izarravm-bus",
    "crates/izarravm-core",
    "crates/izarravm-corpus",
    "crates/izarravm-cpu",
    "crates/izarravm-dos",
    "crates/izarravm-firmware",
    "crates/izarravm-input",
    "crates/izarravm-machine",
    "crates/izarravm-video",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/vorvek/IzarraVM"
authors = ["IzarraVM contributors"]

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"

[workspace.dependencies]
bitflags = "2.6"
clap = { version = "4.5", features = ["derive", "env"] }
cpal = "0.15"
gilrs = "0.11"
midir = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
eframe = { version = "0.32", default-features = false, features = ["wgpu", "default_fonts", "x11", "wayland"] }
rfd = "0.15"
softbuffer = "0.4.8"
tempfile = "3.10"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
walkdir = "2.5"
wgpu = "25"
winit = "0.30"
