[package]
name = "izarravm-dos"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
izarravm-bus = { path = "../izarravm-bus" }

[dev-dependencies]
tempfile.workspace = true
