[package]
name = "izarravm-machine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
izarravm-audio = { path = "../izarravm-audio" }
izarravm-bus = { path = "../izarravm-bus" }
izarravm-core = { path = "../izarravm-core" }
izarravm-cpu = { path = "../izarravm-cpu" }
izarravm-dos = { path = "../izarravm-dos" }
izarravm-firmware = { path = "../izarravm-firmware" }
izarravm-video = { path = "../izarravm-video" }

[dev-dependencies]
tempfile.workspace = true
