[package]
name = "izarravm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
clap.workspace = true
egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
winit.workspace = true
wgpu.workspace = true
pollster.workspace = true
rfd.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
izarravm-audio = { path = "../izarravm-audio" }
izarravm-bus = { path = "../izarravm-bus" }
izarravm-core = { path = "../izarravm-core" }
izarravm-cpu = { path = "../izarravm-cpu" }
izarravm-firmware = { path = "../izarravm-firmware" }
izarravm-input = { path = "../izarravm-input" }
izarravm-machine = { path = "../izarravm-machine" }
izarravm-video = { path = "../izarravm-video" }
serde.workspace = true
time = { version = "0.3.45", default-features = false, features = ["std", "local-offset"] }
toml.workspace = true

[target.'cfg(windows)'.dependencies]
# Raw Input FFI for the WM_INPUT mouse hook that keeps a high-polling-rate mouse
# from flooding winit's event pump. Matches the version winit already pulls in.
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_Input",
    "Win32_UI_WindowsAndMessaging",
] }
