[package]
name = "virtualdos-cpu"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
virtualdos-bus = { path = "../virtualdos-bus" }

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
