[package]
name = "virtualdos-machine"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
virtualdos-bus = { path = "../virtualdos-bus" }
virtualdos-core = { path = "../virtualdos-core" }
virtualdos-cpu = { path = "../virtualdos-cpu" }
virtualdos-video = { path = "../virtualdos-video" }

[dev-dependencies]
virtualdos-firmware = { path = "../virtualdos-firmware" }
