[package]
name = "toka-pack"
version = "0.1.0"
edition = "2021"
publish = false

# Stand alone: not part of the IzarraVM workspace. This is an authoring-only
# tool that bundles the built Toka-DOS binaries into the ROM blob the firmware
# embeds. CI never builds it.
[workspace]

[[bin]]
name = "toka-pack"
path = "src/main.rs"
